fix forms size and gap

--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -20,6 +20,7 @@
   height: 148px;
   padding-top: 14px;
   border-radius: 16px;
+  resize: none;
 }
 
 .form_submit {
@@ -40,4 +41,14 @@
 
 .form_submit:active {
   box-shadow: 1px 4px 16px rgba(232, 232, 240, 0.4);
+}
+
+@media (min-width: 1200px) {
+  .form1 {
+    width: 411px;
+  }
+
+  .input {
+    width: 411px;
+  }
 }
