--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -68,6 +68,7 @@
   }
   .contacts {
     padding-bottom: 120px;
+    gap: 198px;
   }
 }
 
@@ -89,6 +90,7 @@
   }
   .contacts {
     padding-bottom: 164px;
+    gap: 198px;
   }
 }
 
